--- a/style.css
+++ b/style.css
@@ -7,3 +7,55 @@ html,body{
     width: 100%;
     height: 100%;
 }
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+}
+.main{
+    width: 50vw;
+    height: 100vh;
+    background: url(bg1.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+.hero{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    padding: 15px;
+
+}
+.box1{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    justify-content: space-between;
+
+}
+
+.logo img{
+    width: 100px;
+    height: 50px;
+}
+.text h2{
+    font-size: 20px;
+    font-style: italic;
+}
+.text h1{
+    font-size: 40px;
+
+}
+.box2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+.box2 img{
+    width: 100px;
+}
