--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    box-shadow: 0px 5px 15px 2px black;
 
 }
 .hero{
@@ -49,6 +50,18 @@ body{
 .text h1{
     font-size: 40px;
 
+}
+.heading{
+    width: 140px;
+}
+.heading h5{
+    background: linear-gradient(to top,#124b4d,#388677) ;
+    color: #fff;
+    padding: 5px;
+    
+}
+.point h3 i{
+    color: #124b4d;
 }
 .box2{
     display: flex;
