--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: 0px 5px 15px 2px black;
+    overflow: hidden;
 
 }
 .hero{
@@ -35,7 +36,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 15px;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 
 }
 
@@ -50,6 +51,15 @@ body{
 .text h1{
     font-size: 40px;
 
+}
+.text span{
+    text-shadow: 2px 5px 10px #124b4d;
+    background: linear-gradient(to top,#124b4d,#388677);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.text p{
+    padding-top: 10px;
 }
 .heading{
     width: 140px;
@@ -84,13 +94,47 @@ body{
 .A span{
     font-size: 10px;
 }
+.number{
+    display: flex;
+}
+.number i{
+    font-size: 25px;
+    color: #124b4d;
+    padding: 5px;
+}
+.number p{
+    font-size: 15px;
+}
 
 .box2{
+    width: 50%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
+    background: url(image1.avif);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     
 }
 .box2 img{
-    width: 100px;
+    border-radius: 48px 0;
+}
+.img1 img{
+    width: 120px;
+    height: auto;
+    background-color: #db6868;
+    margin-left: 30px;
+    margin-bottom: 0px;
+    z-index: 1;
+}
+.img2 img{
+    margin-left: 120px;
+    width: 200px;
+    position: relative;
+}
+.img3 img{
+    width: 200px;
+    margin-bottom: 100px;
+    z-index: 1;
 }
