--- a/style.css
+++ b/style.css
@@ -109,32 +109,52 @@ body{
 .box2{
     width: 50%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    gap: 1px;
     background: url(image1.avif);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     
 }
+.box{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .box2 img{
     border-radius: 48px 0;
 }
 .img1 img{
-    width: 120px;
+    width: 100px;
     height: auto;
     background-color: #db6868;
-    margin-left: 30px;
     margin-bottom: 0px;
     z-index: 1;
 }
-.img2 img{
-    margin-left: 120px;
-    width: 200px;
-    position: relative;
-}
+
 .img3 img{
-    width: 200px;
+    width: 130px;
     margin-bottom: 100px;
     z-index: 1;
+}
+.percent{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: linear-gradient(to top,#124b4d,#388677);
+    border: 3px solid #fff;
+    padding-bottom: 50px;
+    z-index: 1;
+    margin-left: -50px;
+    box-shadow: 0px 5px 15px 2px #fff;
+}
+.percent p{
+    text-align: center;
+    color: #fff;
+    font-weight: bolder;
+    font-style: italic;
+    padding-top: 15px;
+    font-size: 25px;
 }
