--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
 }
 .text h1{
     font-size: 40px;
-
+    text-shadow: 2px 5px 10px #000;
 }
 .text span{
     text-shadow: 2px 5px 10px #124b4d;
@@ -110,8 +110,7 @@ body{
     width: 50%;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
-    gap: 1px;
+    gap: 60px;
     background: url(image1.avif);
     background-size: cover;
     background-position: center;
@@ -124,19 +123,19 @@ body{
     justify-content: space-between;
 }
 .box2 img{
-    border-radius: 48px 0;
+    border-radius: 50px;
 }
 .img1 img{
     width: 100px;
-    height: auto;
+    height: 100px;
     background-color: #db6868;
     margin-bottom: 0px;
     z-index: 1;
 }
 
 .img3 img{
-    width: 130px;
-    margin-bottom: 100px;
+    width: 120px;
+    
     z-index: 1;
 }
 .percent{
@@ -148,7 +147,7 @@ body{
     padding-bottom: 50px;
     z-index: 1;
     margin-left: -50px;
-    box-shadow: 0px 5px 15px 2px #fff;
+    box-shadow: 0px 5px 15px 2px #124b4d;
 }
 .percent p{
     text-align: center;
